# obsidian-frontmatter-tool

./: .gitignore  README-en-translation.md  README-en.md  README.md  README_de.md  README_fr.md  TODO-en-translation.md  TODO-en.md  TODO.md  TODO_de.md  TODO_fr.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main_window.py
app/core/: __init__.py  file_operations.py  utils.py
app/core/actions/: (delete_action.py, write_action.py etc.)  __init__.py  base_action.py  check_key_exists_action.py  check_key_missing_action.py  check_key_value_match_action.py  delete_files_by_kv_action.py  delete_key_action.py  rename_key_action.py  write_kv_action.py
app/styles/: __init__.py  cyberpunk_theme.py
app/ui_components/: __init__.py  dialogs.py  file_explorer.py  frontmatter_table_viewer.py  frontmatter_viewer.py
tests/: test_utils.py
translations/: de.qm  de.ts  en.qm  en.ts  fr.ts
